New minor version 0.12.0-beta - Tag for leafs

--- a/factory/03-tree/00-showcase[fr].tex
+++ b/factory/03-tree/00-showcase[fr].tex
@@ -6,7 +6,7 @@
 
     \usepackage{01-basic}
     \usepackage{02-coment}
-    \usepackage{03-tag-level}
+    \usepackage{03-tag}
     \usepackage{04-textofnodes}
     \usepackage{05-frame}
     \usepackage{06-focus-edge}
