--- a/factory/03-tree/08-tree-technical[fr].tex
+++ b/factory/03-tree/08-tree-technical[fr].tex
@@ -18,7 +18,10 @@
 
 
 \IDoption{} la valeur par défaut étant \verb#asit#.
-            \emph{\textbf{ATTENTION !} L'option s'indique via \texttt{<...>} et non le traditionnel \texttt{[...]}.}
+            
+\smallskip
+
+\phantom{\IDoption{}}\emph{\textbf{ATTENTION !} L'option s'indique via \texttt{<...>} et non le traditionnel \texttt{[...]}.}
 
 \begin{enumerate}
     \item \verb#asit# : pour les poids, on suit les indications données dans le code.
@@ -54,36 +57,10 @@ Avec l'option \verb#showall# le poids sera affiché comme si on avait utilisé \
 \IDkey{pframe} pour encadrer un sous-arbre depuis un noeud vers toutes les feuilles de celui-ci.
 
 
-% ---------------------- %
 
-
-\separation
-
-
-\IDmacro{ptreeFrame}{1}{3} \hfill \mwhyprefix{p}{robabilty}
-
-\IDoption{} un système de type \texttt{clé = valeur}.
-
-\begin{enumerate}
-    \item \verb#lcol# : la couleur au format TikZ du cadre. La valeur par défaut est \verb#blue#.
-\end{enumerate}
-
-
-\IDargs{1..3} les noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite) tous indiqués via \verb#name = ...# \emph{(en fait l'ordre n'est pas important ici)}.
-
-
-\bigskip
-
-
-\IDmacro{aptreeFrame}{1}{3} \hfill \mwhyprefix{a}{auto}
-
-\extraspace
-\extraspace
-
-Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
-
-
-% ---------------------- %
+% ----------------------- %
+% ---------- C ---------- %
+% ----------------------- %
 
 
 \separation
@@ -121,15 +98,138 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
-% ---------------------- %
+
+% ----------------------- %
+% ---------- F ---------- %
+% ----------------------- %
 
 
 \separation
 
 
-\IDmacro{ptreeTag }{1}{2}
+\IDmacro{ptreeFocus}{1}{1}
 
-\IDmacro{ptreeTag*}{1}{2}
+\IDoption{} un système de type \texttt{clé = valeur}.
+
+\begin{enumerate}    
+    \item \verb#lcol# : la couleur au format TikZ des lignes des arrêtes et des cadres éventuels. La valeur par défaut est \verb#blue#.
+
+    \item \verb#tcol# : la couleur au format TikZ du texte. La valeur par défaut est \verb#black#.
+
+    \item \verb#bcol# : la couleur au format TikZ du fond. La valeur par défaut est \verb#white#.
+    
+    \extraspace
+    
+    \item \verb#frame# : le type d'encadrement souhaité. La valeur par défaut est \verb#nostart#. Voici les valeurs disponibles.
+    \begin{enumerate}
+    	\item \verb#nostart# : le 1\ier{} noeud n'est pas encadré mais les autres le sont.
+
+    	\item \verb#start  # : tous les noeuds sont encadrés. 
+
+    	\item \verb#none   # : aucun des noeuds n'est encadré.
+    \end{enumerate}
+\end{enumerate}
+
+\IDarg{} les noms des noeuds dans le bon ordre séparés par des barres verticales \verb#|# .
+
+
+\bigskip
+
+
+\IDmacro{aptreeFocus}{1}{1}
+
+\IDoption{} un système de type \texttt{clé = valeur} plus réduit que celui de \macro{ptreeFocus}.
+
+\begin{enumerate}    
+    \item \verb#lcol# : la couleur au format TikZ des lignes des arrêtes et des cadres éventuels. La valeur par défaut est \verb#blue#.
+
+    \extraspace
+    
+    \item \verb#frame# : voir les indications précédentes.
+\end{enumerate}
+
+\IDarg{} : voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
+
+
+% ----------------------- %
+
+
+\separation
+
+
+\IDmacro{ptreeFrame}{1}{3} \hfill \mwhyprefix{p}{robabilty}
+
+\IDoption{} un système de type \texttt{clé = valeur}.
+
+\begin{enumerate}
+    \item \verb#lcol# : la couleur au format TikZ du cadre. La valeur par défaut est \verb#blue#.
+\end{enumerate}
+
+
+\IDargs{1..3} les noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite) tous indiqués via \verb#name = ...# \emph{(en fait l'ordre n'est pas important ici)}.
+
+
+\bigskip
+
+
+\IDmacro{aptreeFrame}{1}{3} \hfill \mwhyprefix{a}{auto}
+
+\extraspace
+\extraspace
+
+Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
+
+
+
+% ----------------------- %
+% ---------- L ---------- %
+% ----------------------- %
+
+
+\separation
+
+
+\IDmacro{ptreeTagLeaf }{1}{2}
+
+\IDmacro{ptreeTagLeaf*}{1}{2}
+
+\IDoption{} un système de type \texttt{clé = valeur}.
+
+\begin{enumerate}
+    \item \verb#tcol# : la couleur au format TikZ du texte. La valeur par défaut est \verb#black#.
+
+    \item \verb#dx# : une distance horizontale relative de décalage. La valeur par défaut est \verb#0cm#.
+
+    \item \verb#dy# : une distance verticale relative de décalage. La valeur par défaut est \verb#0cm#.
+\end{enumerate}
+
+\IDarg{1} les noms des noeuds séparés par des barres verticales \verb#|# .
+
+\IDarg{2} le texte commun décrivant chaque feuille.
+
+
+\bigskip
+
+
+\IDmacro{aptreeTagLeaf }{1}{2}
+
+\IDmacro{aptreeTagLeaf*}{1}{2}
+
+\extraspace
+\extraspace
+
+Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
+
+
+% ----------------------- %
+
+
+\separation
+
+
+\IDmacro{ptreeTagLevel }{1}{2}
+
+\IDmacro{ptreeTagLevel*}{1}{2}
 
 \IDoption{} un système de type \texttt{clé = valeur}.
 
@@ -149,9 +249,9 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 \bigskip
 
 
-\IDmacro{aptreeTag }{1}{2}
+\IDmacro{aptreeTagLevel }{1}{2}
 
-\IDmacro{aptreeTag*}{1}{2}
+\IDmacro{aptreeTagLevel*}{1}{2}
 
 \extraspace
 \extraspace
@@ -159,29 +259,10 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
-% ---------------------- %
 
-
-\separation
-
-
-\IDmacro[a]{ptreeTextOf}{1}
-
-\IDarg{} le nom du noeud.
-
-
-%\bigskip
-%
-%
-%\IDmacro[a]{aptreeTextOf}{1}
-%
-%\extraspace
-%\extraspace
-%
-%Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
-
-
-% ---------------------- %
+% ----------------------- %
+% ---------- N ---------- %
+% ----------------------- %
 
 
 \separation
@@ -212,7 +293,7 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 %Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
-% ---------------------- %
+% ----------------------- %
 
 
 \separation
@@ -244,52 +325,25 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 %Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
-% ---------------------- %
+% ---------- T ---------- %
 
 
 \separation
 
 
-\IDmacro{ptreeFocus}{1}{1}
+\IDmacro[a]{ptreeTextOf}{1}
 
-\IDoption{} un système de type \texttt{clé = valeur}.
-
-\begin{enumerate}    
-    \item \verb#lcol# : la couleur au format TikZ des lignes des arrêtes et des cadres éventuels. La valeur par défaut est \verb#blue#.
-
-    \item \verb#tcol# : la couleur au format TikZ du texte. La valeur par défaut est \verb#black#.
-
-    \item \verb#bcol# : la couleur au format TikZ du fond. La valeur par défaut est \verb#white#.
-    
-    \extraspace
-    
-    \item \verb#frame# : le type d'encadrement souhaité. La valeur par défaut est \verb#nostart#. Voici les valeurs disponibles.
-    \begin{enumerate}
-    	\item \verb#nostart# : le 1\ier{} noeud n'est pas encadré mais les autres le sont.
-
-    	\item \verb#start  # : tous les noeuds sont encadrés. 
-
-    	\item \verb#none   # : aucun des noeuds n'est encadré.
-    \end{enumerate}
-\end{enumerate}
-
-\IDarg{} les noms des noeuds indiqués via \verb#name = ...# à fournir dans le bon ordre et à séparer par des barres verticales \verb#|# .
+\IDarg{} le nom du noeud.
 
 
-\bigskip
+%\bigskip
+%
+%
+%\IDmacro[a]{aptreeTextOf}{1}
+%
+%\extraspace
+%\extraspace
+%
+%Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
-
-\IDmacro{aptreeFocus}{1}{1}
-
-\IDoption{} un système de type \texttt{clé = valeur}.
-
-\begin{enumerate}    
-    \item \verb#lcol# : la couleur au format TikZ des lignes des arrêtes et des cadres éventuels. La valeur par défaut est \verb#blue#.
-
-    \extraspace
-    
-    \item \verb#frame# : voir les indications précédentes.
-\end{enumerate}
-
-\IDarg{} : voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 \end{document}
