--- a/factory/99-major-change-log/changes/2020/09-02.tex
+++ b/factory/99-major-change-log/changes/2020/09-02.tex
@@ -29,10 +29,7 @@ Nouvelle version mineure \verb+0.9.0-beta+.
         \end{enumerate}
 
 
-        \item \macro{ptreeFocus} a évolué
-              \footnote{
-              		Malheureusement ces changements n'ont pas pu être faits pour \macro{aptreeFocus} principalement car l'équivalent automatique de \macro{ptreeTextOf} n'a pu être implémenté.
-			  }.
+        \item \macro{ptreeFocus} a évolué.
 
         \begin{enumerate}
         	\item \macro{ptreeFocus[frame = start]} remplace l'ancien \macro{ptreeFocus}.
@@ -45,9 +42,12 @@ Nouvelle version mineure \verb+0.9.0-beta+.
         \end{enumerate}
 
 
+        \item \macro{aptreeFocus} a évolué presque comme \macro{ptreeFocus} car pour la couleur seule \verb#lcol# est disponible.
+
+
         \item \verb#tcol# remplace l'ancien \verb#col# de \macro{ptreeComment} et \macro{aptreeComment}.
 
-		\item \verb#lcol# remplace l'ancien \verb#col# de \macro{ptreeFrame}, \macro{aptreeFrame} et \macro{aptreeFocus}.
+		\item \verb#lcol# remplace l'ancien \verb#col# de \macro{ptreeFrame} et \macro{aptreeFrame}.
 
 
 
