--- a/tnsproba/tnsproba.sty
+++ b/tnsproba/tnsproba.sty
@@ -834,31 +834,122 @@
 }
 
 
-% --------------- %
-% -- TAG LEVEL -- %
-% --------------- %
+% --------- %
+% -- TAG -- %
+% --------- %
 
-\setKVdefault[tnsproba@level@tag@keys]{%
+\setKVdefault[tnsproba@tag@keys]{%
     tcol = black,
     dx   = 0cm,
     dy   = 0cm
 }
 
 
+\newcommand\tnsproba@ptree@tag@leaf@text{}
+\newcommand\tnsproba@ptree@tag@leaf@text@color{}
+
+\newcommand\tnsproba@ptree@tag@leaf@dx{}
+\newcommand\tnsproba@ptree@tag@leaf@dy{}
+
+
+% -- LEAF TAGS -- %
+
+%    #1 : number of the node
+%    #2 : the node
+
+\newcommand\tnsproba@tag@leaf@abstract@one@node@no@star[2]{
+	\ptreeComment[tcol = \tnsproba@ptree@tag@leaf@text@color,
+	              dx   = \tnsproba@ptree@tag@leaf@dx,
+	              dy   = \tnsproba@ptree@tag@leaf@dy]%
+	             {#2}%
+	             {\tnsproba@ptree@tag@leaf@text}
+}
+
+
+\newcommand\tnsproba@tag@leaf@abstract@one@node@star[2]{
+	\ptreeComment*[tcol = \tnsproba@ptree@tag@leaf@text@color,
+	               dx   = \tnsproba@ptree@tag@leaf@dx,
+	               dy   = \tnsproba@ptree@tag@leaf@dy]%
+	              {#2}%
+	              {\tnsproba@ptree@tag@leaf@text}
+}
+
+
+%    #1 : node1 | node2 | ...
+
+\newcommand\tnsproba@ptree@tag@leaf@abstract@multi@nodes@no@star[1]{
+% Note
+%
+%    #1 : macro to apply
+%    #2 : multi-args
+	\tns@multi@apply@each%
+	    {\tnsproba@tag@leaf@abstract@one@node@no@star}%
+	    {#1}
+}
+
+
+\newcommand\tnsproba@ptree@tag@leaf@abstract@multi@nodes@star[1]{
+% Note
+%
+%    #1 : macro to apply
+%    #2 : multi-args
+	\tns@multi@apply@each%
+	    {\tnsproba@tag@leaf@abstract@one@node@star}%
+	    {#1}
+}
+
+%    #1 : color
+%
+%    #2 : names of the nodes separated by |
+%    #3 : tag
+
+\newcommand\ptreeTagLeaf{\@ifstar{\ptree@tag@leaf@star}{\ptree@tag@leaf@no@star}}
+
+
+%    #4 : the macro to print the special comments.
+
+\newcommand\ptree@tag@leaf@star@no@star[4]{
+    \useKVdefault[tnsproba@tag@keys]%
+    \setKV[tnsproba@tag@keys]{#1}%
+    \renewcommand\tnsproba@ptree@tag@leaf@text@color{\useKV[tnsproba@tag@keys]{tcol}}%
+    \renewcommand\tnsproba@ptree@tag@leaf@dx{\useKV[tnsproba@tag@keys]{dx}}%
+    \renewcommand\tnsproba@ptree@tag@leaf@dy{\useKV[tnsproba@tag@keys]{dy}}%
+	%
+	\renewcommand\tnsproba@ptree@tag@leaf@text{#3}%
+	%
+	#4{#2}
+}
+
+
+\newcommand\ptree@tag@leaf@no@star[3][]{
+    \ptree@tag@leaf@star@no@star{#1}{#2}{#3}%
+                                {\tnsproba@ptree@tag@leaf@abstract@multi@nodes@no@star}
+}
+
+
+\newcommand\ptree@tag@leaf@star[3][]{
+    \ptree@tag@leaf@star@no@star{#1}{#2}{#3}%
+                                {\tnsproba@ptree@tag@leaf@abstract@multi@nodes@star}
+}
+
+
+
+% -- LEVEL TAGS -- %
+
 %    #1 : color
 %
 %    #2 : name of a node at the level wanted
 %    #3 : tag
 
-\newcommand\ptreeTag{\@ifstar{\ptree@tag@star}{\ptree@tag@no@star}}
+\newcommand\ptreeTagLevel{\@ifstar{\ptree@tag@level@star}{\ptree@tag@level@no@star}}
 
 
-\newcommand\ptree@tag@no@star[3][]{
-    \useKVdefault[tnsproba@level@tag@keys]%
-    \setKV[tnsproba@level@tag@keys]{#1}%
-    \edef\tcol{\useKV[tnsproba@level@tag@keys]{tcol}}%
-    \edef\dx{\useKV[tnsproba@level@tag@keys]{dx}}%
-    \edef\dy{\useKV[tnsproba@level@tag@keys]{dy}}%
+\newcommand\ptree@tag@level@no@star[3][]{
+    \useKVdefault[tnsproba@tag@keys]%
+    \setKV[tnsproba@tag@keys]{#1}%
+    \edef\tcol{\useKV[tnsproba@tag@keys]{tcol}}%
+    \edef\dx{\useKV[tnsproba@tag@keys]{dx}}%
+    \edef\dy{\useKV[tnsproba@tag@keys]{dy}}%
 	%
 	\node[anchor = north,
 	      xshift = \dx,
@@ -867,12 +958,12 @@
 }
 
 
-\newcommand\ptree@tag@star[3][]{
-    \useKVdefault[tnsproba@level@tag@keys]%
-    \setKV[tnsproba@level@tag@keys]{#1}%
-    \edef\tcol{\useKV[tnsproba@level@tag@keys]{tcol}}%
-    \edef\dx{\useKV[tnsproba@level@tag@keys]{dx}}%
-    \edef\dy{\useKV[tnsproba@level@tag@keys]{dy}}%
+\newcommand\ptree@tag@level@star[3][]{
+    \useKVdefault[tnsproba@tag@keys]%
+    \setKV[tnsproba@tag@keys]{#1}%
+    \edef\tcol{\useKV[tnsproba@tag@keys]{tcol}}%
+    \edef\dx{\useKV[tnsproba@tag@keys]{dx}}%
+    \edef\dy{\useKV[tnsproba@tag@keys]{dy}}%
 	%
 	\node[anchor = south,
 	      xshift = \dx,
@@ -1127,31 +1218,100 @@
 
 
 
+% -- LEAF TAGS WITH AUTO NUMBERING -- %
+
+
+%    #1 : number of the node
+%    #2 : the node
+
+\newcommand\tnsproba@tag@leaf@abstract@one@node@no@star@auto[2]{
+	\ptreeComment[tcol = \tnsproba@ptree@tag@leaf@text@color,
+	              dx   = \tnsproba@ptree@tag@leaf@dx,
+	              dy   = \tnsproba@ptree@tag@leaf@dy]%
+	             {!#2}%
+	             {\tnsproba@ptree@tag@leaf@text}
+}
+
+
+\newcommand\tnsproba@tag@leaf@abstract@one@node@star@auto[2]{
+	\ptreeComment*[tcol = \tnsproba@ptree@tag@leaf@text@color,
+	               dx   = \tnsproba@ptree@tag@leaf@dx,
+	               dy   = \tnsproba@ptree@tag@leaf@dy]%
+	              {!#2}%
+	              {\tnsproba@ptree@tag@leaf@text}
+}
+
+
+%    #1 : node1 | node2 | ...
+
+\newcommand\tnsproba@ptree@tag@leaf@abstract@multi@nodes@no@star@auto[1]{
+% Note
+%
+%    #1 : macro to apply
+%    #2 : multi-args
+	\tns@multi@apply@each%
+	    {\tnsproba@tag@leaf@abstract@one@node@no@star@auto}%
+	    {#1}
+}
+
+
+\newcommand\tnsproba@ptree@tag@leaf@abstract@multi@nodes@star@auto[1]{
+% Note
+%
+%    #1 : macro to apply
+%    #2 : multi-args
+	\tns@multi@apply@each%
+	    {\tnsproba@tag@leaf@abstract@one@node@star@auto}%
+	    {#1}
+}
+
+%    #1 : color
+%
+%    #2 : names of the nodes separated by |
+%    #3 : tag
+
+\newcommand\aptreeTagLeaf{\@ifstar{\aptree@tag@leaf@star}{\aptree@tag@leaf@no@star}}
+
+
+%    #4 : the macro to print the special comments.
+
+\newcommand\aptree@tag@leaf@star@no@star[4]{
+    \useKVdefault[tnsproba@tag@keys]%
+    \setKV[tnsproba@tag@keys]{#1}%
+    \renewcommand\tnsproba@ptree@tag@leaf@text@color{\useKV[tnsproba@tag@keys]{tcol}}%
+    \renewcommand\tnsproba@ptree@tag@leaf@dx{\useKV[tnsproba@tag@keys]{dx}}%
+    \renewcommand\tnsproba@ptree@tag@leaf@dy{\useKV[tnsproba@tag@keys]{dy}}%
+	%
+	\renewcommand\tnsproba@ptree@tag@leaf@text{#3}%
+	%
+	#4{#2}
+}
+
+
+\newcommand\aptree@tag@leaf@no@star[3][]{
+    \aptree@tag@leaf@star@no@star{#1}{#2}{#3}%
+                                 {\tnsproba@ptree@tag@leaf@abstract@multi@nodes@no@star@auto}
+}
+
+
+\newcommand\aptree@tag@leaf@star[3][]{
+    \aptree@tag@leaf@star@no@star{#1}{#2}{#3}%
+                                 {\tnsproba@ptree@tag@leaf@abstract@multi@nodes@star@auto}
+}
+
+
+
 % -- LEVEL TAGS WITH AUTO NUMBERING -- %
 
 
-\newcommand\aptreeTag{\@ifstar{\aptree@tag@star}{\aptree@tag@no@star}}
+\newcommand\aptreeTagLevel{\@ifstar{\aptree@tag@level@star}{\aptree@tag@level@no@star}}
 
-\newcommand\aptree@tag@no@star[3][]{
-	\ptree@tag@no@star[#1]{!#2}{#3}
+\newcommand\aptree@tag@level@no@star[3][]{
+	\ptree@tag@level@no@star[#1]{!#2}{#3}
 }
 
-
-
-\newcommand\aptree@tag@star[3][]{
-	\ptree@tag@star[#1]{!#2}{#3}
-}
-
-
-
-% -- FRAMES WITH AUTO NUMBERING -- %
-
-% #1 : color
-% #2 : left start corner
-% #3 : right up   corner
-% #4 : right down corner
-\newcommand\aptreeFrame[4][]{%
-    \ptreeFrame[#1]{!#2}{!#3}{!#4}%
+\newcommand\aptree@tag@level@star[3][]{
+	\ptree@tag@level@star[#1]{!#2}{#3}
 }
 
 
@@ -1263,4 +1423,16 @@
     ]%
 	%
 	\tocall{#2}
+}
+
+
+
+% -- FRAMES WITH AUTO NUMBERING -- %
+
+% #1 : color
+% #2 : left start corner
+% #3 : right up   corner
+% #4 : right down corner
+\newcommand\aptreeFrame[4][]{%
+    \ptreeFrame[#1]{!#2}{!#3}{!#4}%
 }
