--- a/factory/03-tree/07-auto-num[fr].tex
+++ b/factory/03-tree/07-auto-num[fr].tex
@@ -6,7 +6,7 @@
 
     \usepackage{01-basic}
     \usepackage{02-coment}
-    \usepackage{03-tag-level}
+    \usepackage{03-tag}
     \usepackage{04-textofnodes}
     \usepackage{05-frame}
     \usepackage{06-focus-edge}
@@ -23,7 +23,7 @@
 
 \subsection{Utiliser les noms automatiques donnés par \texttt{forest}} \label{tnsproba-autonum-forest}
 
-Voyons comment obtenir le résultat suivant en indiquant tous les noeuds via les noms automatiques fabriqués par \verb@forest@.
+Voyons comment obtenir le résultat suivant en indiquant tous les noeuds via les noms automatiques fabriqués par \verb#forest#.
 %\footnote{
 %	Le même rendu peut se taper bien plus efficacement via la macro à un argument \macro{ptreeFocusAll*} comme cela est expliqué dans la section précédente.
 %}.
@@ -48,7 +48,7 @@ Voici comment s'y prendre.
 		  {\itshape
 		  		\textbf{ATTENTION !}
 		  		Il n'est pas possible de modifier les couleurs du texte et du fond des noeuds car \macro{aptreeTextOf}, \macro{aptreeNodeColor} et \macro{aptreeNodeNewText} n'ont pas pu être implémentées.
-		  		Par contre les macros \macro{aptreeComment} et \macro{aptreeFrame} existent sans limitation.
+		  		Par contre les macros \macro{aptreeComment} et \macro{aptreeFrame} ainsi que \macro{aptreeTagLevel} et \macro{aptreeTagLeaf} existent sans limitation.
 		  }
 
 		  \medskip
@@ -60,7 +60,7 @@ Voici comment s'y prendre.
 	      fabriqué par \verb#forest# commence par \texttt{!} . Ce caractère spécial n'est pas à indiquer car il sera ajouté automatiquement en coulisse.
 
 	
-	\item La racine est nommée \texttt{!} par \verb#forest# d'où le \verb#|# seul au début de l'argument de \macro{aptreeFocus*} ci-dessus afin d'indiquer un texte vide comme tout premier noeud.
+	\item La racine est nommée \texttt{!} par \verb#forest# d'où le \verb#|# seul au début de l'argument de \macro{aptreeFocus*} ci-dessus afin d'indiquer un texte vide comme nom du tout premier noeud.
 
 	
 	\item Pour voir ce qu'il faut faire pour un noeud autre que la racine, considérons par exemple \texttt{1321}. On indique en fait le chemin à suivre après la racine pour arriver au noeud voulu.
