--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -291,10 +291,10 @@
 	Le package \texttt{tnsproba}:\\%
 	parler des probabilités facilement\\%
 	{\footnotesize Code source disponible sur \url{https://github.com/typensee-latex/tnsproba.git}.}\\%
-{\footnotesize Version \texttt{0.11.0-beta} développée et testée sur \macosxname{}.}%
+{\footnotesize Version \texttt{0.12.0-beta} développée et testée sur \macosxname{}.}%
 }
 \author{Christophe BAL}
-\date{2020-09-23}
+\date{2020-09-28}
 
 \maketitle
 
@@ -774,14 +774,63 @@ Voici les pièges à éviter.
 \end{enumerate}
 %\section{Arbres pondérés}
 
+\subsection{Décorer les feuilles}
+
+Il peut être utile de décorer de la même façon différents chemins pour indiquer des évènements étudiés.
+C'est la raison d'être de \macro{ptreeTagLeaf} et \macro{ptreeTagLeaf*} qui produisent le même commentaire pour différents noeuds.
+Notez dans les exemples que les noms des noeuds sont séparés par le symbole \verb+|+ avec la possibilité d'ajouter des espaces pour améliorer la lisibilité du code.
+
+
+\newparaexample{Décorer au même niveau}
+
+\inputlatexexflat{tikz/probatree-tag-leaf.tkz}
+
+
+% ---------------------- %
+
+
+\newparaexample{Décorer sur des niveaux décalés}
+
+La démo. suivante n'utilise que \verb#dx# mais bien entendu \verb#dy# est aussi disponible.
+
+\inputlatexexflat{tikz/probatree-tag-leaf-dx.tkz}
+
+
+% ---------------------- %
+
+
+\newparaexample{Décorer au plus près}
+
+Voici un exemple avec un arbre dissymétrique
+\footnote{
+	Est-ce vraiment pertinent comme usage ?
+}.
+
+\inputlatexexflat{tikz/probatree-tag-leaf-star.tkz}
+
+
+\begin{remark}
+	Sans utiliser la version étoilée de \macro{ptreeTagLeaf}, on obtient ce qui suit qui est mauvais.
+
+	\begin{center}
+		\input{tikz/probatree-tag-leaf-no-star-bad.tkz}
+	\end{center}
+	
+	Le package \verb#forest# propose \verb#fit = band# qui est très utile dans ce type de situation.
+	Voici comment utiliser ceci.
+	
+	\inputlatexexflat{tikz/probatree-tag-leaf-no-star-good.tkz} 
+\end{remark}
+%\section{Arbres pondérés}
+
 \subsection{Expliquer les niveaux}
 
-Les clés étant similaires à celles vues pour les commentaires, les exemples devraient donc se suffire à eux-mêmes.
+Grâce aux deux sections précédentes les exemples devraient se suffire à eux-mêmes pour comprendre les fonctionnements de \macro{ptreeTagLevel} et \macro{ptreeTagLevel*}.
 
 
 \newparaexample{Expliquer au-dessus}
 
-\inputlatexexflat{tikz/probatree-tag-up.tkz}
+\inputlatexexflat{tikz/probatree-tag-level-above.tkz}
 
 
 % ---------------------- %
@@ -789,7 +838,7 @@ Les clés étant similaires à celles vues pour les commentaires, les exemples d
 
 \newparaexample{Expliquer en dessous}
 
-\inputlatexexflat{tikz/probatree-tag-down.tkz}
+\inputlatexexflat{tikz/probatree-tag-level-below.tkz}
 
 
 % ---------------------- %
@@ -797,7 +846,7 @@ Les clés étant similaires à celles vues pour les commentaires, les exemples d
 
 \newparaexample{Décalages horizontal et vertical}
 
-\inputlatexexflat{tikz/probatree-tag-dx-dy.tkz}
+\inputlatexexflat{tikz/probatree-tag-level-dx-dy.tkz}
 %\section{Arbres pondérés}
 
 \subsection{Textes des noeuds}
@@ -999,7 +1048,7 @@ Avec \verb#frame = none# on obtient l'arbre ci-dessous.
 
 \subsection{Utiliser les noms automatiques donnés par \texttt{forest}} \label{tnsproba-autonum-forest}
 
-Voyons comment obtenir le résultat suivant en indiquant tous les noeuds via les noms automatiques fabriqués par \verb@forest@.
+Voyons comment obtenir le résultat suivant en indiquant tous les noeuds via les noms automatiques fabriqués par \verb#forest#.
 %\footnote{
 %	Le même rendu peut se taper bien plus efficacement via la macro à un argument \macro{ptreeFocusAll*} comme cela est expliqué dans la section précédente.
 %}.
@@ -1024,7 +1073,7 @@ Voici comment s'y prendre.
 		  {\itshape
 		  		\textbf{ATTENTION !}
 		  		Il n'est pas possible de modifier les couleurs du texte et du fond des noeuds car \macro{aptreeTextOf}, \macro{aptreeNodeColor} et \macro{aptreeNodeNewText} n'ont pas pu être implémentées.
-		  		Par contre les macros \macro{aptreeComment} et \macro{aptreeFrame} existent sans limitation.
+		  		Par contre les macros \macro{aptreeComment} et \macro{aptreeFrame} ainsi que \macro{aptreeTagLevel} et \macro{aptreeTagLeaf} existent sans limitation.
 		  }
 
 		  \medskip
@@ -1036,7 +1085,7 @@ Voici comment s'y prendre.
 	      fabriqué par \verb#forest# commence par \texttt{!} . Ce caractère spécial n'est pas à indiquer car il sera ajouté automatiquement en coulisse.
 
 	
-	\item La racine est nommée \texttt{!} par \verb#forest# d'où le \verb#|# seul au début de l'argument de \macro{aptreeFocus*} ci-dessus afin d'indiquer un texte vide comme tout premier noeud.
+	\item La racine est nommée \texttt{!} par \verb#forest# d'où le \verb#|# seul au début de l'argument de \macro{aptreeFocus*} ci-dessus afin d'indiquer un texte vide comme nom du tout premier noeud.
 
 	
 	\item Pour voir ce qu'il faut faire pour un noeud autre que la racine, considérons par exemple \texttt{1321}. On indique en fait le chemin à suivre après la racine pour arriver au noeud voulu.
@@ -1091,6 +1140,24 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 
 \begin{description}
 % Changes shown - START
+
+    \medskip
+    \item[2020-09-28] Nouvelle version mineure \verb+0.12.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic{Arbre de probabilités}
+    
+        \begin{itemize}[itemsep=.5em]
+            \item Les macros \macro{ptreeTag}, \macro{ptreeTag*}, \macro{aptreeTag} et \macro{aptreeTag*} ont été renommées \macro{ptreeTagLevel}, \macro{ptreeTagLevel*}, \macro{aptreeTagLevel} et \macro{aptreeTagLevel*}.
+    
+    		\item \macro{ptreeTagLeaf}, \macro{ptreeTagLeaf*}, \macro{aptreeTagLeaf} et \macro{aptreeTagLeaf*} permettent de décorer des racines avec le même texte.
+        \end{itemize}
+    \end{itemize}
+    
+    
+    \separation
+
+% ------------------------ %
 
     \medskip
     \item[2020-09-23] Nouvelle version mineure \verb+0.11.0-beta+.
@@ -1168,10 +1235,7 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
             \end{enumerate}
     
     
-            \item \macro{ptreeFocus} a évolué
-                  \footnote{
-                  		Malheureusement ces changements n'ont pas pu être faits pour \macro{aptreeFocus} principalement car l'équivalent automatique de \macro{ptreeTextOf} n'a pu être implémenté.
-    			  }.
+            \item \macro{ptreeFocus} a évolué.
     
             \begin{enumerate}
             	\item \macro{ptreeFocus[frame = start]} remplace l'ancien \macro{ptreeFocus}.
@@ -1184,9 +1248,12 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
             \end{enumerate}
     
     
+            \item \macro{aptreeFocus} a évolué presque comme \macro{ptreeFocus} car pour la couleur seule \verb#lcol# est disponible.
+    
+    
             \item \verb#tcol# remplace l'ancien \verb#col# de \macro{ptreeComment} et \macro{aptreeComment}.
     
-    		\item \verb#lcol# remplace l'ancien \verb#col# de \macro{ptreeFrame}, \macro{aptreeFrame} et \macro{aptreeFocus}.
+    		\item \verb#lcol# remplace l'ancien \verb#col# de \macro{ptreeFrame} et \macro{aptreeFrame}.
     
     
     
@@ -1541,6 +1608,9 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 
 
 
+
+
+
 \subsection{Arbres pondérés}
 
 
@@ -1549,7 +1619,10 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 
 
 \IDoption{} la valeur par défaut étant \verb#asit#.
-            \emph{\textbf{ATTENTION !} L'option s'indique via \texttt{<...>} et non le traditionnel \texttt{[...]}.}
+            
+\smallskip
+
+\phantom{\IDoption{}}\emph{\textbf{ATTENTION !} L'option s'indique via \texttt{<...>} et non le traditionnel \texttt{[...]}.}
 
 \begin{enumerate}
     \item \verb#asit# : pour les poids, on suit les indications données dans le code.
@@ -1585,36 +1658,10 @@ Avec l'option \verb#showall# le poids sera affiché comme si on avait utilisé \
 \IDkey{pframe} pour encadrer un sous-arbre depuis un noeud vers toutes les feuilles de celui-ci.
 
 
-% ---------------------- %
 
-
-\separation
-
-
-\IDmacro{ptreeFrame}{1}{3} \hfill \mwhyprefix{p}{robabilty}
-
-\IDoption{} un système de type \texttt{clé = valeur}.
-
-\begin{enumerate}
-    \item \verb#lcol# : la couleur au format TikZ du cadre. La valeur par défaut est \verb#blue#.
-\end{enumerate}
-
-
-\IDargs{1..3} les noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite) tous indiqués via \verb#name = ...# \emph{(en fait l'ordre n'est pas important ici)}.
-
-
-\bigskip
-
-
-\IDmacro{aptreeFrame}{1}{3} \hfill \mwhyprefix{a}{auto}
-
-\extraspace
-\extraspace
-
-Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
-
-
-% ---------------------- %
+% ----------------------- %
+% ---------- C ---------- %
+% ----------------------- %
 
 
 \separation
@@ -1652,15 +1699,138 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
-% ---------------------- %
+
+% ----------------------- %
+% ---------- F ---------- %
+% ----------------------- %
 
 
 \separation
 
 
-\IDmacro{ptreeTag }{1}{2}
+\IDmacro{ptreeFocus}{1}{1}
 
-\IDmacro{ptreeTag*}{1}{2}
+\IDoption{} un système de type \texttt{clé = valeur}.
+
+\begin{enumerate}    
+    \item \verb#lcol# : la couleur au format TikZ des lignes des arrêtes et des cadres éventuels. La valeur par défaut est \verb#blue#.
+
+    \item \verb#tcol# : la couleur au format TikZ du texte. La valeur par défaut est \verb#black#.
+
+    \item \verb#bcol# : la couleur au format TikZ du fond. La valeur par défaut est \verb#white#.
+    
+    \extraspace
+    
+    \item \verb#frame# : le type d'encadrement souhaité. La valeur par défaut est \verb#nostart#. Voici les valeurs disponibles.
+    \begin{enumerate}
+    	\item \verb#nostart# : le 1\ier{} noeud n'est pas encadré mais les autres le sont.
+
+    	\item \verb#start  # : tous les noeuds sont encadrés. 
+
+    	\item \verb#none   # : aucun des noeuds n'est encadré.
+    \end{enumerate}
+\end{enumerate}
+
+\IDarg{} les noms des noeuds dans le bon ordre séparés par des barres verticales \verb#|# .
+
+
+\bigskip
+
+
+\IDmacro{aptreeFocus}{1}{1}
+
+\IDoption{} un système de type \texttt{clé = valeur} plus réduit que celui de \macro{ptreeFocus}.
+
+\begin{enumerate}    
+    \item \verb#lcol# : la couleur au format TikZ des lignes des arrêtes et des cadres éventuels. La valeur par défaut est \verb#blue#.
+
+    \extraspace
+    
+    \item \verb#frame# : voir les indications précédentes.
+\end{enumerate}
+
+\IDarg{} : voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
+
+
+% ----------------------- %
+
+
+\separation
+
+
+\IDmacro{ptreeFrame}{1}{3} \hfill \mwhyprefix{p}{robabilty}
+
+\IDoption{} un système de type \texttt{clé = valeur}.
+
+\begin{enumerate}
+    \item \verb#lcol# : la couleur au format TikZ du cadre. La valeur par défaut est \verb#blue#.
+\end{enumerate}
+
+
+\IDargs{1..3} les noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite) tous indiqués via \verb#name = ...# \emph{(en fait l'ordre n'est pas important ici)}.
+
+
+\bigskip
+
+
+\IDmacro{aptreeFrame}{1}{3} \hfill \mwhyprefix{a}{auto}
+
+\extraspace
+\extraspace
+
+Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
+
+
+
+% ----------------------- %
+% ---------- L ---------- %
+% ----------------------- %
+
+
+\separation
+
+
+\IDmacro{ptreeTagLeaf }{1}{2}
+
+\IDmacro{ptreeTagLeaf*}{1}{2}
+
+\IDoption{} un système de type \texttt{clé = valeur}.
+
+\begin{enumerate}
+    \item \verb#tcol# : la couleur au format TikZ du texte. La valeur par défaut est \verb#black#.
+
+    \item \verb#dx# : une distance horizontale relative de décalage. La valeur par défaut est \verb#0cm#.
+
+    \item \verb#dy# : une distance verticale relative de décalage. La valeur par défaut est \verb#0cm#.
+\end{enumerate}
+
+\IDarg{1} les noms des noeuds séparés par des barres verticales \verb#|# .
+
+\IDarg{2} le texte commun décrivant chaque feuille.
+
+
+\bigskip
+
+
+\IDmacro{aptreeTagLeaf }{1}{2}
+
+\IDmacro{aptreeTagLeaf*}{1}{2}
+
+\extraspace
+\extraspace
+
+Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
+
+
+% ----------------------- %
+
+
+\separation
+
+
+\IDmacro{ptreeTagLevel }{1}{2}
+
+\IDmacro{ptreeTagLevel*}{1}{2}
 
 \IDoption{} un système de type \texttt{clé = valeur}.
 
@@ -1680,9 +1850,9 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 \bigskip
 
 
-\IDmacro{aptreeTag }{1}{2}
+\IDmacro{aptreeTagLevel }{1}{2}
 
-\IDmacro{aptreeTag*}{1}{2}
+\IDmacro{aptreeTagLevel*}{1}{2}
 
 \extraspace
 \extraspace
@@ -1690,29 +1860,10 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
-% ---------------------- %
 
-
-\separation
-
-
-\IDmacro[a]{ptreeTextOf}{1}
-
-\IDarg{} le nom du noeud.
-
-
-%\bigskip
-%
-%
-%\IDmacro[a]{aptreeTextOf}{1}
-%
-%\extraspace
-%\extraspace
-%
-%Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
-
-
-% ---------------------- %
+% ----------------------- %
+% ---------- N ---------- %
+% ----------------------- %
 
 
 \separation
@@ -1743,7 +1894,7 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 %Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
-% ---------------------- %
+% ----------------------- %
 
 
 \separation
@@ -1775,54 +1926,26 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 %Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
-% ---------------------- %
+% ---------- T ---------- %
 
 
 \separation
 
 
-\IDmacro{ptreeFocus}{1}{1}
+\IDmacro[a]{ptreeTextOf}{1}
 
-\IDoption{} un système de type \texttt{clé = valeur}.
-
-\begin{enumerate}    
-    \item \verb#lcol# : la couleur au format TikZ des lignes des arrêtes et des cadres éventuels. La valeur par défaut est \verb#blue#.
-
-    \item \verb#tcol# : la couleur au format TikZ du texte. La valeur par défaut est \verb#black#.
-
-    \item \verb#bcol# : la couleur au format TikZ du fond. La valeur par défaut est \verb#white#.
-    
-    \extraspace
-    
-    \item \verb#frame# : le type d'encadrement souhaité. La valeur par défaut est \verb#nostart#. Voici les valeurs disponibles.
-    \begin{enumerate}
-    	\item \verb#nostart# : le 1\ier{} noeud n'est pas encadré mais les autres le sont.
-
-    	\item \verb#start  # : tous les noeuds sont encadrés. 
-
-    	\item \verb#none   # : aucun des noeuds n'est encadré.
-    \end{enumerate}
-\end{enumerate}
-
-\IDarg{} les noms des noeuds indiqués via \verb#name = ...# à fournir dans le bon ordre et à séparer par des barres verticales \verb#|# .
+\IDarg{} le nom du noeud.
 
 
-\bigskip
-
-
-\IDmacro{aptreeFocus}{1}{1}
-
-\IDoption{} un système de type \texttt{clé = valeur}.
-
-\begin{enumerate}    
-    \item \verb#lcol# : la couleur au format TikZ des lignes des arrêtes et des cadres éventuels. La valeur par défaut est \verb#blue#.
-
-    \extraspace
-    
-    \item \verb#frame# : voir les indications précédentes.
-\end{enumerate}
-
-\IDarg{} : voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
+%\bigskip
+%
+%
+%\IDmacro[a]{aptreeTextOf}{1}
+%
+%\extraspace
+%\extraspace
+%
+%Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
 
