New subminor version 0.12.1-beta: white for back of frame in math

--- a/factory/99-major-change-log/changes/2020/09-23.tex
+++ b/factory/99-major-change-log/changes/2020/09-23.tex
@@ -2,7 +2,7 @@ Nouvelle version mineure \verb+0.11.0-beta+.
 
 \begin{itemize}[itemsep=.5em]
     \item \topic*{Arbre de probabilités}
-    	  ajout de \macro{ptreeTag}, \macro{ptreeTag*}, \macro{aptreeTag} et \macro{aptreeTag*} pour décrire individuellement les niveaux de l'arbre.
+    	  ajout de \macro{ptreeTag} et \macro{ptreeTag*}, ainsi que \macro{aptreeTag} et \macro{aptreeTag*} pour décrire individuellement les niveaux de l'arbre.
 \end{itemize}
 
 
