--- a/factory/02-table/01-calculate-expval.sty
+++ b/factory/02-table/01-calculate-expval.sty
@@ -46,6 +46,7 @@
 
 \newcommand\frameText[2][blue]{
     \tcboxmath[colframe = #1,
+               colback  = white,
                boxsep   = 1mm, boxrule = 1pt,
                left     = 0mm, right   = 0mm, 
                top      = 0mm, bottom  = 0mm]{#2}
