--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -22,15 +22,28 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2021-03-23] Nouvelle version sous-mineure \verb+0.12.1-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic*{Calcul de l'espérance d'une variable aléatoire finie}
+              la couleur de fond des boîtes en mode mathématique n'était pas blanche...
+    \end{itemize}
+    
+    
+    \separation
+
+% ------------------------ %
+
+    \medskip
     \item[2020-09-28] Nouvelle version mineure \verb+0.12.0-beta+.
     
     \begin{itemize}[itemsep=.5em]
         \item \topic{Arbre de probabilités}
     
         \begin{itemize}[itemsep=.5em]
-            \item Les macros \macro{ptreeTag}, \macro{ptreeTag*}, \macro{aptreeTag} et \macro{aptreeTag*} ont été renommées \macro{ptreeTagLevel}, \macro{ptreeTagLevel*}, \macro{aptreeTagLevel} et \macro{aptreeTagLevel*}.
-    
     		\item \macro{ptreeTagLeaf}, \macro{ptreeTagLeaf*}, \macro{aptreeTagLeaf} et \macro{aptreeTagLeaf*} permettent de décorer des racines avec le même texte.
+    
+            \item Les macros \macro{ptreeTag}, \macro{ptreeTag*}, \macro{aptreeTag} et \macro{aptreeTag*} ont été renommées \macro{ptreeTagLevel}, \macro{ptreeTagLevel*}, \macro{aptreeTagLevel} et \macro{aptreeTagLevel*}.
         \end{itemize}
     \end{itemize}
     
@@ -44,7 +57,7 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
     
     \begin{itemize}[itemsep=.5em]
         \item \topic*{Arbre de probabilités}
-        	  ajout de \macro{ptreeTag}, \macro{ptreeTag*}, \macro{aptreeTag} et \macro{aptreeTag*} pour décrire individuellement les niveaux de l'arbre.
+        	  ajout de \macro{ptreeTag} et \macro{ptreeTag*}, ainsi que \macro{aptreeTag} et \macro{aptreeTag*} pour décrire individuellement les niveaux de l'arbre.
     \end{itemize}
     
     
