--- a/factory/99-major-change-log/last-model-nodoc[fr].tex
+++ b/factory/99-major-change-log/last-model-nodoc[fr].tex
@@ -1,7 +1,14 @@
-Nouvelle version mineure \verb+0.11.0-beta+.
+Nouvelle version mineure \verb+0.12.0-beta+.
 
-aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa aa 
 \begin{itemize}[itemsep=.5em]
-    \item \topic*{Arbre de probabilités}
-    	  ajout de \macro{ptreeTag}, \macro{ptreeTag*}, \macro{aptreeTag} et \macro{aptreeTag*} pour décrire individuellement les niveaux de l'arbre.
+    \item \topic{Arbre de probabilités}
+
+    \begin{itemize}[itemsep=.5em]
+		\item \macro{ptreeTagLeaf}, \macro{ptreeTagLeaf*}, \macro{aptreeTagLeaf} et \macro{aptreeTagLeaf*} permettent de décorer des racines avec le même texte.
+
+        \item Les macros \macro{ptreeTag}, \macro{ptreeTag*}, \macro{aptreeTag} et \macro{aptreeTag*} ont été renommées \macro{ptreeTagLevel}, \macro{ptreeTagLevel*}, \macro{aptreeTagLevel} et \macro{aptreeTagLevel*}.
+    \end{itemize}
 \end{itemize}
+
+
+\separation
